--- a/Curso/scss/estilos.scss
+++ b/Curso/scss/estilos.scss
@@ -1,3 +1,15 @@
+$texto:red;
+$principal: blue;
+$secundar
+io:orange;
+body {
+  background: $principal;
+  color:$texto;
+  border:5px solid $secundario;
+}
+
 .encabezado{
     display: flex;
+    background-image: linear-gradient(red,blue);
+    justify-content: center;
 }
