--- a/Curso/scss/estilos.css
+++ b/Curso/scss/estilos.css
@@ -1,17 +1,4 @@
-body {
-  background: blue;
-  color: red;
-  border: 5px solid orange;
-}
-
 .encabezado {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(red), to(blue));
-  background-image: linear-gradient(red, blue);
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
+  display: flex; }
+
 /*# sourceMappingURL=estilos.css.map */
